<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MiXiT 2020</string>
    <string name="empty"></string>
    <string name="event_day1">Wednesday 29th April</string>
    <string name="event_day2">Thursday 30th April</string>

    <string name="title_sync">Synchronize data</string>
    <string name="title_talks">Talks</string>
    <string name="title_speakers">Speakers</string>
    <string name="title_website">Web site</string>
    <string name="title_twitter">Follow us</string>
    <string name="title_github">Contribute</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_favorites">Favorites</string>

    <string name="talk_time_range">"%1$s from %2$s to %3$s "</string>
    <string name="topic_image">Topic image</string>

    <string name="roomandcapa" formatted="false">%s (cap. %s)</string>
    <string name="amphi1" tools:keep="@string/amphi1">Lovelace Amphitheatre</string>
    <string name="amphi2" tools:keep="@string/amphi2">Hamilton Amphitheatre</string>
    <string name="amphic">C Amphitheatre</string>
    <string name="amphid">D Amphitheatre</string>
    <string name="amphik">K Amphitheatre</string>
    <string name="speaker">Salle du conseil</string>
    <string name="room1" tools:keep="@string/room1">Gosling Room (S03)</string>
    <string name="room2" tools:keep="@string/room2">Eich Room (S02)</string>
    <string name="room3" tools:keep="@string/room3">Nonaka Room (S120)</string>
    <string name="room4" tools:keep="@string/room4">Dijkstra Room (S121)</string>
    <string name="room5" tools:keep="@string/room5">Turing Room (S122)</string>
    <string name="room6" tools:keep="@string/room6">Lovelace Room (S123)</string>
    <string name="room7" tools:keep="@string/room7">Mezzanine</string>
    <string name="room8" tools:keep="@string/room8">Salon des symboles</string>
    <string name="unknown" tools:keep="@string/room7">Unknown room</string>
    <string name="surprise">Surprise...</string>
    <string name="outside">Outside in the playground</string>
    <string name="mummy">Milky Way room (S117)</string>


    <string name="hearing_risp">This room will be equipped with a web-based RISP system for people who are deaf or hard of hearing</string>
    <string name="hearing_scrivo">This room will be equipped with a semi automatic transcription system (Scrivobox) for people who are deaf or hard of hearing</string>
    <string name="open_scrivo">Scrivobox transcription</string>
    <string name="video">This session will be filmed and the video will be posted on our website after the conference</string>


    <string name="about_title">MiXiT 2020 Client</string>
    <string name="about_description">This app was created by MiXiT team to help you to follow the conference. If you want to increase this app you can. The project is Open Source and available on <a href="https://github.com/mixitconf/mixit-android">Github</a>. For more informations you can go on our <a href="https://mixitconf.org">website</a></string>

    <string name="TALK">TALK</string>
    <string name="WORKSHOP">WORKSHOP</string>
    <string name="RANDOM">RANDOM</string>
    <string name="KEYNOTE">KEYNOTE</string>
    <string name="KEYNOTE_SURPRISE">OPENING SESSION</string>
    <string name="CLOSING_SESSION">CLOSING SESSION</string>
    <string name="planning_team_word">Team introduction</string>
    <string name="planning_session_intro">Session introduction by speakers</string>
    <string name="planning_team_outro">Team conclusion</string>
    <string name="planning_pause_10">Pause (10 min)</string>
    <string name="planning_pause_25">Pause (25 min)</string>
    <string name="planning_pause_30">Pause (30 min)</string>
    <string name="planning_lunch">Lunch</string>
    <string name="planning_random">Random sessions</string>
    <string name="planning_reception">Reception (coffee)</string>

    <string name="welcome">The conference from Lyon with crêpes and love</string>
    <string name="dates">29 \u0026 30 April 2020</string>

    <string name="come_to_mixit">Come to MiXiT</string>
    <string name="come_to_party">Come to Party</string>
    <string name="appPermission">MiXiT app can add talks you want to see on your calendar. Of course it\'s not mandatory. Your calendar data are not read. We just check that you have no overlapped events to prevent your calendar pollution.
    </string>
    <string name="en">EN</string>
    <string name="calendar_add">Calendar event</string>
    <string name="calendar_question2">You have already an event in your calendar on the same time range. Do you want still to add this session to your Calendar ?
    </string>
    <string name="calendar_question1">Do you want to add this session to your Calendar ?</string>
    <string name="party">Party</string>


    <string name="error_sync_speakers">Error on speaker synchronization (%s)</string>
    <string name="error_sync_talks">Error on talk synchronization (%s)</string>
    <string name="sync_data">Data are synchronized</string>
    <string name="sync_start">Data sync is launched in background...</string>
    <string name="networkPermission">Data synchronization is only available if you give rigths to this app to go on the Internet</string>

    <string name="channel_name">MiXiT notification</string>
    <string name="channel_description">MiXiT app send notifications when data are synchronized or when one of your favorite is saved</string>
    <string name="sync_talk">Talk synchronization is done and data are been updated.</string>
    <string name="sync_finish">Data synchronization is done</string>
    <string name="sync_talk_error">Error on talk synchronization. Retry later please.</string>
    <string name="sync_speaker">Speaker synchronization is done and data are been updated.</string>
    <string name="sync_speaker_error">Error on speaker synchronization. Retry later please.</string>

    <string name="settings_sync_header">Talks</string>
    <string name="settings_sync_talks_speakers">Sync talks and speakers periodically</string>
    <string name="settings_sync_talks_speakers_summary_on">Automatically synchronize talks and speakers with MiXiT website</string>
    <string name="settings_sync_talks_speakers_summary_off">Automatic synchronization is disabled and you have to use the refresh button to sync talks and speakers with MiXiT website</string>

    <string name="settings_favoritesnotif_header">Notifications</string>
    <string name="settings_favoritesnotif_summary">Be notified before the start of your favorite conferences</string>

    <string name="settings_favorites_header">Favorites Sync</string>
    <string name="settings_favorites_summary">Synchronize your favorites with those defined on the website (secured feature)</string>
    <string name="settings_favorite_notification">Favorite notification</string>
    <string name="favorite_notification_minute">Minutes before notification</string>

    <string name="settings_sync_favorites">Sync favorites</string>
    <string name="settings_sync_favorites_summary">Synchronize your favorites with website</string>
    <string name="settings_sync_favorites_token">And the last token received by email. When this token will be expired, a window will help you to ask a new one.</string>
    <string name="settings_sync_favorites_summary_on">Your favorites defined on the Android app will be synchronized with MiXiT website. This synchronisation can be only done manually because website requires authentication</string>
    <string name="settings_sync_favorites_summary_off">We only synchronize speakers and talks and your favorites are only defined on this Android app</string>
    <string name="settings_favorite_notification_on">You will receive a notification just before a conference defined as favorite will be start</string>
    <string name="settings_favorite_notification_off">You won\'t receive a notification just before a conference defined as favorite will be start</string>

    <string name="talk_is_favorite">This talk is defined as favorite.</string>
    <string name="talk_is_not_favorite">This talk is not defined as favorite.</string>
    <string name="talk_no_favorite">You have no talks or workshop marked as favorites for the moment.</string>

    <string name="favorite_will_start" formatted="false">Conference "%s" will start in %s in room %s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_token">Token</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username. Go on MiXiT website to create an account</string>
    <string name="invalid_token">Token length is invalid or expired</string>
    <string name="login_failed">Login failed</string>
    <string name="token_sent">A token was send by email. Please check your mailbox and send it in the future request</string>
    <string name="invalid_credentials">Credentials are invalid</string>
    <string name="email_not_known">Your email is not known. You have to create an account on our website if you want to use this functionnality</string>
    <string name="email_sent_error">MiXiT had an error on email sent. Please retry later</string>
    <string name="unkown_error">An error occured. Please retry later</string>

</resources>
