<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_sync_header">

        <SwitchPreferenceCompat
                app:key="sync_data"
                app:defaultValue="true"
                app:summaryOff="@string/settings_sync_talks_speakers_summary_off"
                app:summaryOn="@string/settings_sync_talks_speakers_summary_on"
                app:title="@string/settings_sync_talks_speakers"/>

        <SwitchPreferenceCompat
                app:key="sync_favorite"
                app:summaryOff="@string/settings_sync_favorites_summary_off"
                app:summaryOn="@string/settings_sync_favorites_summary_on"
                app:title="@string/settings_sync_favorites" />

    </PreferenceCategory>


</PreferenceScreen>
