<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".HomeActivity">

    <item
            android:id="@+id/navigation_twitter"
            android:icon="@drawable/mxt_icon_twitter_zoom"
            android:title="@string/title_twitter"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/navigation_github"
            android:icon="@drawable/mxt_icon_github_zoom"
            android:title="@string/title_github"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/navigation_synchronize"
            android:title="@string/title_sync"
            app:showAsAction="never"/>

    <item android:id="@+id/comeToMiXiTButton"
          android:title="@string/come_to_mixit"
          app:showAsAction="never"/>

    <item android:id="@+id/comeToPartyButton"
          android:title="@string/come_to_party"
          app:showAsAction="never"/>

    <item android:id="@+id/navigation_about"
          android:title="@string/title_about"
          app:showAsAction="never"/>


</menu>
