<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="@dimen/item_image_padding"
            android:text="@string/welcome"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/dates"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="@dimen/item_image_padding"
            android:text="@string/dates"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/colorSecondary" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/item_image_padding"
            android:src="@drawable/mxt_heart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/mxt_background"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>